test/acceptance/validating/failing/include-a-file-without-get-then-quit.spun
include "./no-get.spun"

quit
